Replace ETM::match() with ETM::modelIndexForCollection()

This fixes the bug that folders of another resource can not
be used as target for 'Jump to folder' functionality.

BUG: 259080